--- a/src/pages/intro/intro.html
+++ b/src/pages/intro/intro.html
@@ -6,7 +6,7 @@ topic: Intro
 {{> intro_menu}}
 <div class=lz-r-content>
     <h3>Welcome to LazyStack</h3>
-<p> <a href="">LazyStack</a> 's mission is to enable technical entrepreneurs to quickly field
+<p> LazyStack's mission is to enable technical entrepreneurs to quickly field
     mobile and web applications leveraging scalable cloud-based resources at the lowest initial cost, without sacrificing
     security, scalability or features. </p>
 <p>LazyStack&rsquo;s technical goal is to generate reliable &ldquo;commercial-grade infrastructure&rdquo; and
