Updated tutorial with John's suggestions.

--- a/src/pages/installation/installation_overview.html
+++ b/src/pages/installation/installation_overview.html
@@ -36,4 +36,5 @@ topic: GettingStarted
         <li>Visual Studio and/or .NET Core CLI</li>
     </ul>
     
+    <p>Note: The tutorial assumes you have Windows Visual Studio IDE installed.</p>
 </div>
