--- a/src/pages/tutorial/tutorial_petstoretest.html
+++ b/src/pages/tutorial/tutorial_petstoretest.html
@@ -32,7 +32,7 @@ topic: PetStore Test
                 <li>PetStoreClientSDK</li>
             </ul>
         </li>
-        <li>Add the following package references:
+        <li>Add the following NuGet package references:
             <ul>
                 <li>Microsoft.Extensions.Configuration.UserSecrets</li>
                 <li>Microsoft.Extensions.DependencyInjection</li>
