--- a/src/pages/tutorial/tutorial_publishtoaws.html
+++ b/src/pages/tutorial/tutorial_publishtoaws.html
@@ -6,6 +6,7 @@ topic: Publish to Aws
 {{> tutorial_menu}}
 <div class=lz-r-content>
     <h3>Publish PetStoreDev stack to AWS</h3>
+    <h4>4.1 Publish</h4>
     <p>In this step we will publish our stack to AWS.</p>
     <ol>
         <li>Open the Stacks\Dev folder in the Visual Studio solution explorer pane.</li>
