Updated intro to tutorial to mention use of VS IDE

--- a/src/pages/tutorial/tutorial_overview.html
+++ b/src/pages/tutorial/tutorial_overview.html
@@ -6,9 +6,9 @@ topic: Overview
 {{> tutorial_menu}}
 <div class=lz-r-content>
     <h3>LazyStack Tutorial</h3>
-    <p>This tutorial is robust and meant to touch on all the important aspects of building a 
-        real application stack and core components of a client application that calls that stack. 
-        We use the ubiquitous OpenApi PetStore sample specification with 
+    <p>This tutorial assumes the use of Windows Visual Studio IDE 2019 or newer. It is robust and meant to touch on all 
+        the important aspects of building a real application stack and core components of a client application that 
+        calls that stack. We use the ubiquitous OpenApi PetStore sample specification with 
         a few changes necessary to illustrate important AWS/LazyStack features.
     </p>
     <p>Here are the tutorial lessons:</p>
