Added more mention of VS IDE requirment

--- a/src/pages/tutorial/tutorial_petstore.html
+++ b/src/pages/tutorial/tutorial_petstore.html
@@ -6,7 +6,7 @@ topic: PetStore
 {{> tutorial_menu}}
 <div class=lz-r-content>
     <h3>Building the PetStore Solution</h3>
-    <p>In this lesson step we will build the initial PetStore solution.</p>
+    <p>In this lesson step we will build the initial PetStore solution using the LazyStack Visual Studio Extension.</p>
     <p>Create LazyStackTutorial Folder. We will be creating the Microsoft PetStore solution
         under this folder. 
     </p>
