Small edits to tutorial steps

--- a/src/pages/tutorial/tutorial_controllers.html
+++ b/src/pages/tutorial/tutorial_controllers.html
@@ -54,7 +54,7 @@ topic: Implement Controllers
                 <li><a href="/assets/tutorial/TagRepo.cs" download>TagRepo.cs</a></li>
             </ul>
         </li>
-        <li>Add Project References
+        <li>Add PetStoreRepo Project References
             <ol type="a">
                 <li>Right click on Dependencies. The context menu appears.</li>
                 <li>Select Add Project Reference. The Reference Manager dialog appears.</li>
