Updated home page and a few other little tweaks

--- a/src/pages/intro/intro_security.html
+++ b/src/pages/intro/intro_security.html
@@ -10,7 +10,7 @@ topic: Security
         Building applications in these industries requires conforming to strict coding standards and passing security
         audits. Code generation with tools like LazyStack reduces the time and effort required to produce software
         that complies with these standards and makes passing security audits far less difficult.</p>
-    <p>In general, if you can demonstrate a code generation process produces secure code and infrastructure then you
+    <p>In general, if you can demonstrate that a code generation process produces secure code and infrastructure then you
         need only audit the code generation process - not the code it generates. Also, if a problem is found and fixed
         in the code generation process then it is easy to roll out a security update with confidence.</p>
     <p>Should you care? The software development landscape is changing rapidly with the introduction of privacy
@@ -18,7 +18,7 @@ topic: Security
         avoid substantial regulatory fines for non-compliance or breach. One of the guiding principles of LazyStack is
         security-first development. Cloud providers like AWS, Google and Azure take security very seriously and if you
         use their services correctly you get a huge boost toward fielding a secure application stack. </p>
-    <h4></h4>AWS Security Notes</h4>
+    <h4>AWS Security Notes</h4>
     <p>If you have used AWS Services in the past you may have noticed that we don&rsquo;t show a VPC in the AWS
         stack.
         This is not an oversight. AWS Services use secure signed messaging to communicate with each other so they
