--- a/src/pages/libraries/libraries_overview.html
+++ b/src/pages/libraries/libraries_overview.html
@@ -5,8 +5,8 @@ topic: Overview
 ---
 {{> libraries_menu}}
 <div class=lz-r-content>
-    <h3><a href="https://github.com/InSciCo/LazyStack">LazyStack Repository</a></h3>
-    <p>LazyStack maintains the <a href="https://github.com/InSciCo/LazyStack">LazyStack public repository</a> on GitHub. This repo contains a number of open-source 
+    <h3><a href="https://github.com/InSciCo/LazyStack" target="_blank" rel="noopener noreferrer">LazyStack Repository</a></h3>
+    <p>LazyStack maintains the <a href="https://github.com/InSciCo/LazyStack"  target="_blank" rel="noopener noreferrer">LazyStack public repository</a> on GitHub. This repo contains a number of open-source 
         MIT licensed libraries and tools you may use in your client applications. Our intention is to ensure
         that these libraries are useful even if you are not using LazyStack to generate your stacks.
     </p>
