--- a/src/pages/tutorial/tutorial_petstoretest.html
+++ b/src/pages/tutorial/tutorial_petstoretest.html
@@ -43,7 +43,8 @@ topic: PetStore Test
             <ol type="a">
                 <li>Double Click on the PetStoreTests project in the Solution Explorer. The csproj file opens in an 
                     editor tab.</li>
-                <li>Insert the following Item Group into the csproj file.
+                <li>Insert the following Item Group into the csproj file. Anywhere inside &lt;Project>&lt;/Project> is 
+                    acceptable.
                     <pre><code class="language-xml">
   &lt;ItemGroup>
     &lt;EmbeddedResource Include="..\Stacks\Dev\AwsSettings.json" />
