Changed "boring" to "repetitive" in intro

--- a/src/pages/intro/intro.html
+++ b/src/pages/intro/intro.html
@@ -14,7 +14,7 @@ topic: Intro
         client application uses this specification to implement calls to the AWS Stack. The amount of 
         "plumbing" code and AWS stack configuration necessary to implement a feature rich API specification is often quite large. 
         Plumbing code connects the client app and AWS Lambda function implementing a stack feature. 
-        Plumbing code is repetitive and "boring" to write, making it an excellent candidate for code generation. 
+        Plumbing code is "repetitive", making it an excellent candidate for code generation. 
         In addition, writing complete and correct "SAM" templates used to deploy a stack on AWS is tedious and 
         requires an intimate knowledge of AWS resources. </p>
    
@@ -33,7 +33,7 @@ topic: Intro
     <p></p>
     <li>Lower Cost Development
         <ul>
-            <li>Expensive hand-coding of "boring" plumbing code is eliminated.</li>
+            <li>Expensive hand-coding of "repetitive" plumbing code is eliminated.</li>
             <li>Innovation is easier because new plumbing code and templates are automatically generated when the API specification changes.</li>
             <li>Generated code is consistent, bug-free and reliably compliant with best-practices.</li>
             <li>Developers are freed up to work on features that can't be generated.</li>
