--- a/src/pages/intro/intro.html
+++ b/src/pages/intro/intro.html
@@ -58,34 +58,24 @@ topic: Intro
         app earlier. Leveraging the AWS Serverless Application Model ensures your app has the potential to 
         scale reliably and quickly and launch at low cost using AWS free-tier services.</p>
 </ul>
-<h4>What is LazyStack?</h4>
-<p>LazyStack ingests an OpenApi (swagger) REST API specification and generates the AWS Server Application Model
-    (SAM) configuration and C# projects necessary to stand up a fully featured commercial-grade application stack
-    in AWS. It also generates a client application SDK making it simple to call that stack from C# applications.</p>
-<p>LazyStack is comprised of a free stack generator tool and some MIT licensed open-source support libraries.</p>
-<ul>
-    <li>LazyStack Generator - Free Visual Studio IDE Extension, and Free DOTNET CLI Tool </li>
-    <li>LazyStackAuth - MIT Licensed authentication library</li>
-    <li>LazyStackDynamoDBRepo - MIT Licensed CRUDL library for DynamoDB</li>
-</ul>
-<p>LazyStack builds on these cornerstone technologies:</p>
-<ul>
-    <li>
-        <a href="https://swagger.io/docs/specification/about/">OpenApi (swagger) REST API specification</a>
-    </li>
-    <li>
-        <a href="https://github.com/RicoSuter/NSwag/wiki">NSwag -- .NET Code Generation</a>
-    </li>
-    <li>
-        <a href="https://docs.microsoft.com/en-us/dotnet/fundamentals/">Microsoft .NET Core &amp; C#</a>
-    </li>
-    <li>
-        <a href="https://docs.microsoft.com/en-us/dotnet/csharp/roslyn-sdk/">.NET Complier Platform SDK</a>
-    </li>
-    <li>
-        <a href="https://docs.aws.amazon.com/serverless-application-model/?id=docs_gateway">AWS Serverless
-                Application Model (SAM)</a>
-    </li>
-</ul>
+
+<h3>Why did we build LazyStack?</h3>
+<p>Technical Entrepreneurs generally have more ideas than capital. LazyStack makes it easier to bring a fully
+    functional application stack to market at a very low development and operational cost so more of these ideas
+    can be market tested until viable monetization is demonstrable. The recent &ldquo;Fail Fast&rdquo; mantra 
+    does have some merit, but only if your application attempt doesn&rsquo;t fail in the technical sense. 
+    LazyStack generates commercial grade production stacks that can be used in support of prototype apps but 
+    also for production apps.</p>
+<p>A Technical Entrepreneur may be a single person or a team where the aggregate skill-sets include product
+    definition, product development, product testing, product marketing/sales and product support. We leave
+    general
+    business management and capital raise out of this definition because it is often necessary to demonstrate an
+    app
+    with modest market acceptance before you can raise capital to scale up. </p>
+<p>We would also observe that even in larger organizations it is sometimes a &ldquo;skunk works&rdquo; team that
+    fits our definition of Technical Entrepreneur. </p>
+<p>So, why did we usurp the term LazyStack? There&rsquo;s an old adage, &ldquo;Only lazy programmers write code
+    generators and only code generators can produce bug-free code; thus only lazy programmers write bug-free
+    code&rdquo;. Tongue firmly in cheek here! Well, OK then, why not whole stacks?</p>
 </div>
  
