Added CNAME file

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -58,7 +58,7 @@ section: Homepage
                 <h4>Ticket to Ride!</h4>
                 <img class="card-image" src="/assets/img/pic12.jpg">
                 <p class="card-p-font">Use the free LazyStack Generator and AWS free-tier to launch your 
-                app with fully secure and scalable services that grow with your app at minimal pain and expense. 
+                app with fully secure and scalable services that grow with your app with minimal pain and expense. 
             </p>
             <p class="card-p-font">Build your dream and be ready to scale as users climb on.</p>
             </div>
