Added LazyStackProjects image to techoverview

--- a/src/pages/intro/intro_techoverview.html
+++ b/src/pages/intro/intro_techoverview.html
@@ -15,6 +15,9 @@ topic: Tech Overview
         <li>LazyStackAuth - MIT Licensed authentication library</li>
         <li>LazyStackDynamoDBRepo - MIT Licensed CRUDL library for DynamoDB</li>
     </ul>
+
+    <img src="/assets/img/LazyStackProjects.svg" width="100%"/>
+    <p></p>
     <p>LazyStack builds on these cornerstone technologies:</p>
     <ul>
         <li>
