Updated message on home page

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -36,7 +36,7 @@ section: Homepage
             justify-content:space-around; align-items:center; flex-wrap: wrap;
             min-height:100px; width:100vw;
             z-index:2; margin-bottom: 0px; max-width: 1500px;">
-            <div id="card-1" class="card" style="height: 520px; ">
+            <div id="card-1" class="card" style="height: 480px; ">
                 <h4>Game On!</h4>
                 <img class="card-image" style="object-position:0% 0%" src="/assets/img/pic10.jpg">
                 <p class="card-p-font">LazyStack enables technical entrepreneurs to quickly build and deploy web and mobile apps 
@@ -44,23 +44,22 @@ section: Homepage
                     security, scalability or features.</p>
             </div>
 
-            <div id="card-2" class="card" style="height: 520px; ">
+            <div id="card-2" class="card" style="height: 480px; ">
                 <h4>Accelerate Dev!</h4>
                 <img class="card-image" src="/assets/img/pic11.jpg">
-                <p class="card-p-font">Save hundreds of hours of development and DevOps costs by generating all the 
-                    technical "plumbing" necessary to deploy AWS services like Cognito, API Gateway, and Lambdas in 
-                    a AWS application stack. A ClientSDK is generated making it easy to quickly build apps that utilize 
-                    your stack.
+                <p class="card-p-font">Save hundreds of hours of development and DevOps by generating a ClientSDK 
+                    and all the technical "plumbing" code and configuration necessary to deploy AWS services like Cognito, API Gateway, and Lambdas in 
+                    a AWS application stack. 
                 </p>
             </div>
 
-            <div id="card-3" class="card" style="height: 520px;">
+            <div id="card-3" class="card" style="height: 480px;">
                 <h4>Ticket to Ride!</h4>
                 <img class="card-image" src="/assets/img/pic12.jpg">
-                <p class="card-p-font">Use the free LazyStack Generator and AWS free-tier to launch your 
-                app with fully secure and scalable services that grow with your app with minimal pain and expense. 
+                <p class="card-p-font">Use the free LazyStack Generator and AWS free-tier to launch fully secure and scalable 
+                    services that grow with your app with minimal pain and expense. 
             </p>
-            <p class="card-p-font">Build your dream and be ready to scale as users climb on.</p>
+            <p class="card-p-font">Build your dream and be ready to scale as users climb on for the ride.</p>
             </div>
         </div>
         <div id=spacer-2 style="height:200px;">
