--- a/src/pages/contact/contact_contact.html
+++ b/src/pages/contact/contact_contact.html
@@ -8,7 +8,7 @@ topic: Contact
 <h3>Contacting Us</h3>
 <h4>Issues</h4>
 <p>To report issues, request new features or ask questions please use the Issues tab in the 
-    <a href="https://github.com/InSciCo/LazyStack">LazyStack github repository</a>.</p>
+    <a href="https://github.com/InSciCo/LazyStack" target="_blank" rel="noopener noreferrer">LazyStack github repository</a>.</p>
     <p>We track issues for both the LazyStack libraries and LazyStack generator under the LazyStack project.</p>
 <h4>Insight Sciences Corporation</h4>
 <p>LazyStack is sponsored by Insight Sciences Corporation (InSciCo). Our team are the original authors 
