Added missing cd PetStoreCLI step in tutorial

--- a/src/pages/tutorial/tutorial_cli_petstore.html
+++ b/src/pages/tutorial/tutorial_cli_petstore.html
@@ -20,6 +20,7 @@ tutorial: CLI
         <pre><code class="language-shellsession">mkdir LazyStackTutorial</code></pre>
         <pre><code class="language-shellsession">cd LazyStackTutorial</code></pre>
         <pre><code class="language-shellsession"></code>mkdir PetStoreCLI</pre>
+        <pre><code class="language-shellsession"></code>cd PetStoreCLI</pre>
         <pre><code class="language-shellsession"></code>dotnet new sln</pre>
         <pre><code class="language-shellsession"></code>dotnet new webapi -o PetStoreCLI</pre>
         <pre><code class="language-shellsession"></code>dotnet sln add PetStoreCLI\PetStoreCLI.csproj</pre>
