--- a/src/pages/tutorial/tutorial_cli_configure01.html
+++ b/src/pages/tutorial/tutorial_cli_configure01.html
@@ -71,7 +71,7 @@ tutorial: CLI
           "ASPNETCORE_ENVIRONMENT": "Development"
         }
       },
-      "PetStore": {
+      "PetStoreCLI": {
         "commandName": "Project",
         "launchBrowser": true,
         "applicationUrl": "https://localhost:5001;http://localhost:5000",
