--- a/src/pages/installation/installation_visualstudio.html
+++ b/src/pages/installation/installation_visualstudio.html
@@ -5,24 +5,48 @@ topic: GettingStarted
 ---
 {{> installation_menu}}
 <div class=lz-r-content>
-    <h3>Visual Studio Extension</h3>
-    <h4>Prerequisites</h4>
-    <ul>
-        <li><a href="https://visualstudio.microsoft.com/downloads/" 
-            target="_blank" rel="noopener noreferrer">Install/Update Visual Studio 2019 for Windows</a>
-            <ul>Required Workloads:
+    <h3>LazyStack for Visual Studio Windows</h3>
+    <p>LazyStack is available as a Visual Studio Extension in Windows. You can also install and use 
+        the .NET CLI.
+    </p>
+    <h4>Install Steps</h4>
+    <ol>
+        <li><a href="https://visualstudio.microsoft.com/downloads/" {{> newtab}}
+            >Install/Update Visual Studio 2019 for Windows</a>
+            <ul type="a">Required Workloads:
                 <li>ASP.NET and web development</li>
                 <li>.NET desktop development</li>
                 <li>Mobile development with .NET</li>
-                <li>.NET Core cross-platform development</li>
+                <li>.NET Core cross-platform development (.NET 5)</li>
             </ul>
-        </li>        <li><a href="https://aws.amazon.com/premiumsupport/knowledge-center/create-and-activate-aws-account/" 
-            target="_blank" rel="noopener noreferrer">Create AWS Account</a></li>
-        <li><a href="https://docs.aws.amazon.com/cli/latest/userguide/install-cliv2.html" 
-            target="_blank" rel="noopener noreferrer">Install AWS CLI</a></li>
-        <li><a href="https://marketplace.visualstudio.com/items?itemName=AmazonWebServices.AWSToolkitforVisualStudio2017" 
-            target="_blank" rel="noopener noreferrer">Install AWS Toolkit for Visual Studio 2017 and 2019</a></li>
-            <li><a href="https://marketplace.visualstudio.com/items?itemName=InsightSciencesCorporation.LazyStackVsExt">Install LazyStack Visual Studio Extension</a> </li>
-    </ul>  
+        </li>        
+        <li><a href="https://aws.amazon.com/premiumsupport/knowledge-center/create-and-activate-aws-account/" {{> newtab}}
+            >Create AWS Account</a> - skip this step if you already have an AWS Account</li>
+        <li><a href="https://docs.aws.amazon.com/cli/latest/userguide/install-cliv2.html" {{> newtab}}
+            >Install AWS CLI</a> - skip this step if you already have AWS CLI v2 installed.</li>
+        <li>Install Visual Studio Extensions
+            <ol>
+                <li>Open Visual Studio for Windows</li>
+                <li>Select Extensions &RightArrow; Manage Extensions. The Manage Extensions Dialog appers.</li>
+                <li>Type "AWS Toolkit" into the search field. The "AWS Toolkit for Visual Studio 2017 and 2019" extension is listed.</li>
+                <li>Click the Download button. The extension is scheduled for install.</li>
+                <li>Select Extensions &RightArrow; Manage Extensions. The Manage Extensions Dialog appers.</li>
+                <li>Type LazyStack into the search field. The LazyStackVsExt extension is listed.</li>
+                <li>Click the Download button. The extension is schelduled for install.</li>
+                <li>Close and reopen Visual Studio. The extensions will be installed.</li>
+            </ol>
+        </li>
+    </ol>  
+
+    <p></p>
+
+    <h4>Updating the LazyStack and AWS Toolkit Extensions</h4>
+    <ol>
+        <li>Open Visual Studio for Windows</li>
+        <li>Select Extensions &RightArrow; Manage Extensions. The Manage Extensions Dialog appears.</li>
+        <li>Click "Updates" in the Manage Extensions navigation tree.</li>
+        <li>Select extensions for update (if any have pending updates).</li>
+        <li>Close and reopen Visual Studio for the extension(s) to be fully updated.</li>
+    </ol>
 </div>
  
