--- a/src/pages/tutorial/tutorial_vswin_petstore.html
+++ b/src/pages/tutorial/tutorial_vswin_petstore.html
@@ -9,12 +9,10 @@ tutorial: VS
     <h3>Building the PetStore Solution</h3>
     <p>In this lesson step we will build the initial PetStore solution using the LazyStack Visual Studio Extension.</p>
 
-    <p>Before you get started with the tutorial, be sure to review the <a href="/installation/installation_visualstudio.html">LazyStack Install Prerequisites</a></p>
-    <p>If you are new to AWS then you may want to review <a href="https://aws.amazon.com/getting-started/" {{>newtab}}</a>Getting Started with AWS</a></p>
-
     <p><strong>This tutorial assumes you are using the Windows Visual Studio IDE.</strong></p>
     <h4>1.1 Create PetStore solution</h4>
     <ol>
+        <li><a href="/installation/installation_visualstudio.html">Install LazyStack for Visual Studio IDE for Windows</a></li>
         <li>Create a LazyStackTutorial Folder. We will be creating the PetStore solution under this folder. </li>
         <li>Launch Visual Studio.</li>
         <li>Click on Create a new project. The "Create a new project" dialog appears.</li>
