Fixed some typos and added a new image

--- a/src/pages/installation/installation_mac_visualstudio.html
+++ b/src/pages/installation/installation_mac_visualstudio.html
@@ -5,12 +5,12 @@ topic: GettingStarted
 ---
 {{> installation_menu}}
 <div class=lz-r-content>
-    <h3>Lazystack for Visual Studio MacOS</h3>
+    <h3>LazyStack for Visual Studio MacOS</h3>
     <p>Visual Studio for Mac supports extensions but submissions to the gallery are no longer being accepted by 
-        Microsoft so we don't provide a LazyStack extesnion for Mac. Instead, we use the Visual Studio for Mac 
+        Microsoft so we don't provide a LazyStack extension for Mac. Instead, we use the Visual Studio for Mac 
         External Tools capability to make it easy to call LazyStack from the IDE. 
     </p>
-    <p>The AWS Toolkit is not avaiable for Mac either. However, AWS provides the SAM CLI that we can use instead. Just 
+    <p>The AWS Toolkit is not available for Mac either. However, AWS provides the SAM CLI that we can use instead. Just 
         like LazyStack, we use the Visual Studio for Mac External Tools capability to make using the SAM CLI to 
         publish stack to AWS easy from the IDE.
     </p>
@@ -34,7 +34,7 @@ topic: GettingStarted
         <li>Open Visual Studio for Mac</li>
         <li>Add LazyStack -- Generate Projects tool
             <ol type="a">
-                <li>Select Tools&rightarrow;Edit Custom Tools. The External Tools Pannel appears.</li>
+                <li>Select Tools&rightarrow;Edit Custom Tools. The External Tools Panel appears.</li>
                 <li>Click the Add button. "New Tool" is added to the tools list.</li>
                 <li>Select "New Tool".</li>
                 <li>Edit Title to read "LazyStack - Generate Projects"</li>
