--- a/src/pages/intro/intro.html
+++ b/src/pages/intro/intro.html
@@ -10,6 +10,8 @@ topic: Intro
     mobile and web applications leveraging scalable cloud-based resources at the lowest initial cost, without sacrificing
     security, scalability or features. LazyStack leverages the AWS Serverless Application Model (SAM) to enable you to 
     build and deploy "application stacks" in the AWS cloud.</p>
+    <img src="/assets/img/ThreeGreatTechnologies.svg" width="100%">
+    <p></p>
     <p>It is best practice to create an API specification that defines all the service features available on your AWS Stack. Your 
         client application uses this specification to implement calls to the AWS Stack. The amount of 
         "plumbing" code and AWS stack configuration necessary to implement a feature rich API specification is often quite large. 
