--- a/src/pages/tutorial/tutorial_vsmac_consoleapp.html
+++ b/src/pages/tutorial/tutorial_vsmac_consoleapp.html
@@ -17,7 +17,7 @@ tutorial: VSMac
         <li>Select "Add &RightArrow; New Project" from the context menu. The "Choose a template for your new project" dialog appears.</li>
         <li>Select "Web and Console &rightarrow; App &rightarrow; Console Application" in the search field. </li>
         <li>Click on the Next button. The "Configure your new Console Application" dialog appears.</li>
-        <li>Select ".NET 5.0" as the Target Framework and click the Next button. The next "Configure your new Console Applciation" 
+        <li>Select ".NET 5.0" as the Target Framework and click the Next button. The next "Configure your new Console Application" 
             dialog page appears.</li>
         <li>Edit the project name to read "PetStoreConsoleApp" and click the Create button. The project is added to the solution.</li>
     </ol>
@@ -119,7 +119,7 @@ pet: 1 Alf Available
 <p>In this step we launch a second instance of Visual Studio for Mac and open the </p>
 <ol>
     <li>This assumes you have an instance of Visual Studio for Mac open on the PetStoreMac solution.</li>
-    <li>Right click on the Visual Studio icon in the MacOS dockbar. The context menuy appears.</li>
+    <li>Right click on the Visual Studio icon in the MacOS dockbar. The context menu appears.</li>
     <li>Select "New Instance". The Visual Studio launch dialog appears.</li>
     <li>Open the PetStoreMac solution. You now have two instances of Visual Studio for Mac opened on the PetStoreMac solution.</li>
     <li>In the new instance, right click on the (WebApi) PetStoreMac project. The context menu appears.</li>
