--- a/src/pages/tutorial/tutorial_vswin_configure.html
+++ b/src/pages/tutorial/tutorial_vswin_configure.html
@@ -16,11 +16,14 @@ tutorial: VS
     <li>Use <a href="/generator/generator_projectoptions.html">ProjectOptions</a> directive to configure these project options
         <ul>
             <li><a href="/generator/generator_properties.html">Properties</a></li>
-            <li><a href="/generator/generator_projectreferences.html">ProjectReferences</a> - tell Lambda projects and WebApi projects about the new PetStoreRepo project.</li>
-            <li><a href="/generator/generator_serviceregistrations.html">ServiceRegistrations</a> - use dependency injection to get instances of PetStoreRepo and DynamoDB.</li>
+            <li><a href="/generator/generator_projectreferences.html">ProjectReferences</a> - tell Lambda projects and 
+              WebApi projects about the new PetStoreRepo project.</li>
+            <li><a href="/generator/generator_serviceregistrations.html">ServiceRegistrations</a> - use dependency injection 
+              to get instances of PetStoreRepo and DynamoDB.</li>
         </ul>
     </li>
-    <li>Use <a href="/generator/generator_awsresources.html">AwsResources</a> directive to define AWS::DynamoDB::Table resource for our stack.</li>
+    <li>Use <a href="/generator/generator_awsresources.html">AwsResources</a> directive to define AWS::DynamoDB::Table 
+      resource for our stack.</li>
 </ul>
 <p>When you execute LazyStack - Generate Projects, the following projects are regenerated:</p>
 <ul>
@@ -36,8 +39,8 @@ tutorial: VS
 <p>LazyStack - Generate Projects does not update or modify any other projects in your solution.</p>
 <h4>3.1 Update LazyStack.yaml and Generate Projects</h4>
 <ol>
-   <li>Download this <a href="/assets/tutorial/VSWin/LazyStack.yaml" download="LazyStack.yaml">LazyStack.yaml</a> file and move it into the 
-    solution's root folder.</li>
+   <li>Download this <a href="/assets/tutorial/VSWin/LazyStack.yaml" download="LazyStack.yaml">LazyStack.yaml</a> 
+    file and move it into the solution's root folder.</li>
     <li>Open the LazyStack.yaml file and edit the ProfileName and RegionName values if necessary.</li>
     <li>Save the LazyStack.yaml file.</li>
     <li>Select Tools &RightArrow; LazyStack - Generate Projects. 
