--- a/src/pages/tutorial/tutorial_vswin_xamarinapp.html
+++ b/src/pages/tutorial/tutorial_vswin_xamarinapp.html
@@ -65,12 +65,15 @@ tutorial: VS
 &lt;/Project></code></pre>
         </li>        
         <li>Save the file.</li>
-        <li>Right click on the MainPage.xaml file and select Delete. The MainPage.xaml and MainPage.xaml.cs files are deleted from the project and disk.</li>
+        <li>Right click on the MainPage.xaml file and select Delete. The MainPage.xaml and MainPage.xaml.cs files are deleted from the 
+            project and disk.</li>
         <li>Right click on the App.xaml file and select Delete. The App.xaml and App.xaml.cs files are deleted from the project and disk.</li>
-        <li>Download <a href="/assets/tutorial/VSWin/App.xaml" download>App.xaml</a> and move it into the PetStoreMobileApp project folder using Windows Explorer. Use 
+        <li>Download <a href="/assets/tutorial/VSWin/App.xaml" download>App.xaml</a> and move it into the PetStoreMobileApp project folder 
+            using Windows Explorer. Use 
             Windows Explorer instead of dropping the file into Visual Studio to avoid Visual Studio trying to create an App.xaml.cs file for you.
         </li>
-        <li>Download <a href="/assets/tutorial/VSWin/App.xaml.cs" download>App.xaml.cs</a> and move it into the PetStoreMobileApp project folder using Windows Explorer.</li>
+        <li>Download <a href="/assets/tutorial/VSWin/App.xaml.cs" download>App.xaml.cs</a> and move it into the PetStoreMobileApp project folder 
+            using Windows Explorer.</li>
         <li>Right click on the PetStoreMobileApp project. The context menu appears.</li>
         <li>Select Add &rightarrow; New Folder. A new folder is added to the project. Edit the folder name to read "Views".</li>
         <li>Right click on the PetStoreMobileApp project. The context menu appears.</li>
@@ -99,7 +102,8 @@ tutorial: VS
         <li>Right click on the PetStore solution. The context menu appears.</li>
         <li>Select "Manage Nuget Packages for Solution". The "Nuget - Solution" tab opens.</li>
         <li>Select "Nuget - Solution &rightarrow; Updates". Available Nuget Package updates are listed.</li>
-        <li>If Xamarin.Essentials or Xamarin.Forms is listed, click the checkboxes next to them and then click the Update button. The latest Xamarin packages are 
+        <li>If Xamarin.Essentials or Xamarin.Forms is listed, click the checkboxes next to them and then click the Update button. 
+            The latest Xamarin packages are 
             now referenced in the PetStoreMobileApp and PetStoreMobileApp.Android projects.
         </li>
     </ol>
