Fixed link in tutorial intro

--- a/src/pages/tutorial/tutorial_intro.html
+++ b/src/pages/tutorial/tutorial_intro.html
@@ -14,7 +14,7 @@ tutorial: Intro
     </p>
     <ul>
         <li><a href="/tutorial/tutorial_vswin_overview.html">Visual Studio Tutorial (Windows)</a></li>
+        <li><a href="/tutorial/tutorial_vsmac_overview.html">Visual Studio Tutorial (Mac)</a></li>
         <li><a href="/tutorial/tutorial_cli_overview.html">DotNet CLI Tutorial</a></li>
-        <li>Visual Studio (Mac) -- coming soon</li>
     </ul>
 </div>
