--- a/src/pages/tutorial/tutorial_cli_petstoretest.html
+++ b/src/pages/tutorial/tutorial_cli_petstoretest.html
@@ -42,7 +42,8 @@ tutorial: CLI
     <ol>
         <li>CD into the solution folder (LazyStackTutorial\PetStoreCLI) and use dotnet to add the new project to the solution.
             <pre><code class="language-bash">dotnet new mstest -o PetStoreTests</code></pre>
-            <pre><code class="language-bash">dotnet sln add PetStoreTests\PetStoreTests.csproj</code></pre>
+            Windows: <pre><code class="language-bash">dotnet sln add PetStoreTests\PetStoreTests.csproj</code></pre>
+            MacOS/Linux: <pre><code class="language-bash">dotnet sln add PetStoreTests/PetStoreTests.csproj</code></pre>
             The new PetStoreTests project is added to your solution.
         </li>
     </ol>
