--- a/src/pages/tutorial/tutorial_cli_publishtoaws.html
+++ b/src/pages/tutorial/tutorial_cli_publishtoaws.html
@@ -13,15 +13,17 @@ tutorial: CLI
         <li>Create an s3 bucket - you only need to do this the first time you publish.
             <pre><code class="language-bash">aws s3api create-bucket --bucket petstorecli --region us-east-1 --acl private</code></pre>
         </li>
-        <li>CD into the solution folder (LazyStackTutorial\PetStoreCLI), and use AWS SAM CLI to deploy your stack to AWS.
-            <pre><code class="language-bash">sam deploy -t .\Stacks\Dev\serverless.template --stack-name PetStoreCLIDev --s3-bucket petstorecli --capabilities  CAPABILITY_NAMED_IAM</code></pre>
+        <li>CD into the solution folder (LazyStackTutorial\PetStoreCLI), and use AWS SAM CLI to deploy your stack to AWS. <br>
+            Windows: <pre><code class="language-bash">sam deploy -t .\Stacks\Dev\serverless.template --stack-name PetStoreCLIDev --s3-bucket petstorecli --capabilities  CAPABILITY_NAMED_IAM</code></pre>
+            MacOS/Linux: <pre><code class="language-bash">sam deploy -t ./Stacks/Dev/serverless.template --stack-name PetStoreCLIDev --s3-bucket petstorecli --capabilities  CAPABILITY_NAMED_IAM</code></pre>
             The PetStoreCLIDev stack is deployed to AWS.
         </li>
     </ol>
     <h4>4.2 Generate AwsSettings.json file</h4>
     <ol>
-        <li>CD into the solution folder (LazyStackTutorial\PetStoreCLI), and execute "lazystack settings".
-            <pre><code class="language-bash">lazystack settings PetStoreCLIDev .\Stacks\Dev\AwsSettings.json</code></pre>
+        <li>CD into the solution folder (LazyStackTutorial\PetStoreCLI), and execute "lazystack settings". <br>
+            Windows: <pre><code class="language-bash">lazystack settings PetStoreCLIDev .\Stacks\Dev\AwsSettings.json</code></pre>
+            MacOS/Linux: <pre><code class="language-bash">lazystack settings PetStoreCLIDev ./Stacks/Dev/AwsSettings.json</code></pre>
             An AwsSettings.json file is placed in the Stacks\Dev folder. This file contains the configuration settings 
         necessary for client apps to use the PetStoreCLIDev AWS Stack.</li>
     </ol>    
