Fixed folder names in Xamarin tutorials

--- a/src/pages/tutorial/tutorial_vsmac_xamarinapp.html
+++ b/src/pages/tutorial/tutorial_vsmac_xamarinapp.html
@@ -102,7 +102,7 @@ tutorial: VSMac
             <li>Select Add &rightarrow; New Folder. The New Folder dialog appears. Edit the folder name 
                 to read "ViewModels" and click on the Add button. A new folder is added to the project. </li>
 
-            <li>Download the following files and move them into the PetStoreMobileApp/ViewModel folder.
+            <li>Download the following files and move them into the PetStoreMobileApp/ViewModels folder.
                 <ul>
                     <li><a href="/assets/tutorial/VSMac/BaseViewModel.cs" download>BaseViewModel.cs</a></li>
                     <li><a href="/assets/tutorial/VSMac/ItemsViewModel.cs" download>ItemsViewModel.cs</a></li>
@@ -112,7 +112,7 @@ tutorial: VSMac
 
             <li>Add a Views folder </li>
 
-            <li>Download the following files and move them into the PetStoreMobileApp/ViewModel folder using Finder.
+            <li>Download the following files and move them into the PetStoreMobileApp/Views folder using Finder.
                 <ul>
                     <li><a href="/assets/tutorial/VSMac/ItemsPage.xaml" download>ItemsPage.xaml</a></li>
                     <li><a href="/assets/tutorial/VSMac/ItemsPage.xaml.cs" download>ItemsPage.xaml.cs</a></li>
