--- a/src/pages/tutorial/tutorial_vswin_xamarinapp.html
+++ b/src/pages/tutorial/tutorial_vswin_xamarinapp.html
@@ -78,7 +78,7 @@ tutorial: VS
         <li>Select Add &rightarrow; New Folder. A new folder is added to the project. Edit the folder name to read "Views".</li>
         <li>Right click on the PetStoreMobileApp project. The context menu appears.</li>
         <li>Select Add &rightarrow; New Folder. A new folder is added to the project. Edit the folder name to read "ViewModels".</li>
-        <li>Download the following files and move them into the PetStoreMobileApp/ViewModel folder.
+        <li>Download the following files and move them into the PetStoreMobileApp/ViewModels folder.
             <ul>
                 <li><a href="/assets/tutorial/VSWin/BaseViewModel.cs" download>BaseViewModel.cs</a></li>
                 <li><a href="/assets/tutorial/VSWin/ItemsViewModel.cs" download>ItemsViewModel.cs</a></li>
@@ -86,7 +86,7 @@ tutorial: VS
             </ul>
         </li>
         <li>Add a Views folder </li>
-        <li>Download the following files and move them into the PetStoreMobileApp/ViewModel folder using Windows Explorer.
+        <li>Download the following files and move them into the PetStoreMobileApp/Views folder using Windows Explorer.
             <ul>
                 <li><a href="/assets/tutorial/VSWin/ItemsPage.xaml" download>ItemsPage.xaml</a></li>
                 <li><a href="/assets/tutorial/VSWin/ItemsPage.xaml.cs" download>ItemsPage.xaml.cs</a></li>
